--- a/DjangoProject/main/templates/main/index.html
+++ b/DjangoProject/main/templates/main/index.html
@@ -6,8 +6,8 @@
 
 {% block content %}
     <h1>Главная страница</h1>
-    {% if nodes %}
-    {% for element in nodes %}
+    {% if notes %}
+    {% for element in notes %}
         <div class="alert alert-warning mt-2">
             <h3>{{ element.title }}</h3>
             <p>{{ element.text }}</p>
