--- a/DjangoProject/main/templates/main/base.html
+++ b/DjangoProject/main/templates/main/base.html
@@ -18,7 +18,8 @@
           {% if user.is_authenticated %}
               <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'logout' %}">{{ user.username }} Выйти</a>
           {% else %}
-              <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'login' %}">{{ user.username|default:'Войти' }}</a>
+              <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'signup' %}">Регистрация</a>
+              <a class="me-3 py-2 text-dark text-decoration-none" href="{% url 'login' %}">Войти</a>
           {% endif %}
 
 
