--- a/DjangoProject/main/templates/main/register.html
+++ b/DjangoProject/main/templates/main/register.html
@@ -10,7 +10,7 @@
         {% csrf_token %}
         {{ form.title }}<br>
         {{ form.text }}<br>
-        <button type="submit" class="btn btn-success">Добавить</button>
+        <button class="btn btn-success" type="submit">Добавить</button>
         <span>{{ error }}</span>
     </form>
     
