--- a/DjangoProject/main/templates/registration/signup.html
+++ b/DjangoProject/main/templates/registration/signup.html
@@ -5,9 +5,10 @@
 {% endblock %}
 
 {% block content %}
+    <h1>Signup</h1>
 <form method="post">
     {% csrf_token %}
     {{form}}
-    <input type="submit" value="Регистрация">
+    <input class="btn btn-primary" type="submit" value="Регистрация">
 </form>
 {% endblock %}
