--- a/DjangoProject/main/templates/registration/login.html
+++ b/DjangoProject/main/templates/registration/login.html
@@ -27,11 +27,11 @@
             <td>{{ form.username }}</td></tr>
         </div>
         <div class="form-group">
-            <label class="small mb-1" for="{{ form.password.id_for_label }}"> Имя пользователя</label>
+            <label class="small mb-1" for="{{ form.password.id_for_label }}"> Пароль</label>
             <td>{{ form.password }}</td></tr>
         </div>
         <div class="form-group">
-            <label class="small mb-1" for="{{ form.pin.id_for_label }}"> Имя пользователя</label>
+            <label class="small mb-1" for="{{ form.pin.id_for_label }}"> Код Google Authenticator</label>
             <td>{{ form.pin }}</td></tr>
         </div>
             <input class="btn btn-primary" type="submit" value="Submit"></td>
