--- a/DjangoProject/main/templates/registration/signup.html
+++ b/DjangoProject/main/templates/registration/signup.html
@@ -8,7 +8,18 @@
     <h1>Signup</h1>
 <form method="post">
     {% csrf_token %}
-    {{form}}
+    <div class="form-group">
+            <label class="small mb-1" for="{{ form.username.id_for_label }}"> Имя пользователя</label>
+            <td>{{ form.username }}</td></tr>
+        </div>
+        <div class="form-group">
+            <label class="small mb-1" for="{{ form.password1.id_for_label }}"> Пароль</label>
+            <td>{{ form.password1 }}</td></tr>
+        </div>
+        <div class="form-group">
+            <label class="small mb-1" for="{{ form.password2.id_for_label }}"> Пароль</label>
+            <td>{{ form.password2 }}</td></tr>
+        </div>
     <input class="btn btn-primary" type="submit" value="Регистрация">
 </form>
 {% endblock %}
