--- a/DjangoProject/main/templates/registration/login.html
+++ b/DjangoProject/main/templates/registration/login.html
@@ -6,9 +6,18 @@
 
 {% block content %}
 
-{% if form.errors %}
-  <p>Your username and password didn't match. Please try again.</p>
+<div>
+    {% if form.errors %}
+    {% for field in form %}
+        {% for error in field.errors %}
+          {{ error }}<br>
+        {% endfor %}
+    {% endfor %}
+    {% for error in form.non_field_errors %}
+        {{ error }}<br>
+    {% endfor %}
 {% endif %}
+</div>
 
 {% if next %}
   {% if user.is_authenticated %}
