--- a/DjangoProject/main/templates/main/edit.html
+++ b/DjangoProject/main/templates/main/edit.html
@@ -10,11 +10,11 @@
         {% csrf_token %}
         <p>
             <label>Введите заголовок</label>
-            <input type="text" name="title" value="{{ form.title }}" />
+            <input type="text" name="title" value="{{ note.title }}" />
         </p>
         <p>
             <label>Введите содержание</label>
-            <input type="text" name="text" value="{{ form.text }}" />
+            <input type="text" name="text" value="{{ note.text }}" />
         </p>
 
 {#        {{ form.title }}<br>#}
