{auth}[add] generate session key

--- a/DjangoProject/main/templates/main/about.html
+++ b/DjangoProject/main/templates/main/about.html
@@ -24,6 +24,7 @@
 
 
 <script src="/static/client.js"></script>
+<script src="/static/libbigint.js"></script>
 {#<script src="/static/rsa_crypt.js"></script>#}
 {% endblock %}
 
