--- a/DjangoProject/main/templates/main/create.html
+++ b/DjangoProject/main/templates/main/create.html
@@ -4,17 +4,14 @@
 Создать заметку
 {% endblock %}
 
-
-
 {% block content %}
     <h1>Создать заметку</h1>
     <form method="post">
-    <p id="paragraph"></p>
         {{ form.title }}<br>
         {{ form.text }}<br>
         <input type="text" value="Hello,1111 World!" class="form-control"><br>
         <button type="submit" class="btn btn-success">Добавить</button>
-        <button onclick="encryptAndSendMsg()">Send message</button>
+{#        <button onclick="encryptAndSendMsg()">Send message</button>#}
         <span>{{ error }}</span>
     </form>
     <script src="/static/client.js"></script>
