{auth}[fix] Fix print debug info and signup\signin

--- a/DjangoProject/main/templates/main/register.html
+++ b/DjangoProject/main/templates/main/register.html
@@ -11,7 +11,7 @@
         {{ form.title }}<br>
         {{ form.text }}<br>
         <button class="btn btn-success" type="submit">Добавить</button>
-        <span>{{ error }}</span>
+{#        <span>{{ error }}</span>#}
     </form>
     
 {% endblock %}
