--- a/DjangoProject/main/templates/registration/show_code.html
+++ b/DjangoProject/main/templates/registration/show_code.html
@@ -12,7 +12,7 @@
             <p>Ваш код для Google Authenticator
             <p>{{ show_code_text }}</p>
         </div>
-        <span>{{ error }}</span>
+{#        <span>{{ error }}</span>#}
     </form>
     
 {% endblock %}
