--- a/DjangoProject/main/templates/registration/signup.html
+++ b/DjangoProject/main/templates/registration/signup.html
@@ -10,11 +10,9 @@
     <h1>Signup</h1>
 <div>
     {% if form.errors %}
-    {% for field in form %}
-        {% for error in field.errors %}
-          {{ error }}<br>
-        {% endfor %}
-    {% endfor %}
+        {% if form.errors.password2 %}
+            {{ form.errors.password2 }}
+        {% endif %}
     {% for error in form.non_field_errors %}
         {{ error }}<br>
     {% endfor %}
