--- a/DjangoProject/main/templates/registration/twofactor.html
+++ b/DjangoProject/main/templates/registration/twofactor.html
@@ -13,7 +13,7 @@
             <td>{{ form.pin_code }}</td></tr>
         </div>
         <button type="submit" class="btn btn-success">Подтвердить</button>
-        <span>{{ error }}</span>
+{#        <span>{{ error }}</span>#}
     </form>
     
 {% endblock %}
