{auth}[fix] Fis show Full_key DH in web

--- a/DjangoProject/main/templates/main/edit.html
+++ b/DjangoProject/main/templates/main/edit.html
@@ -13,7 +13,7 @@
         </p>
         <p>
             <label>Введите содержание</label>
-            <textarea type="text" name="text"/>{{ note.text }}></textarea>
+            <textarea type="text" name="text"/>{{ note.text }}</textarea>
         </p>
 
 {#        {{ form.title }}<br>#}
